# FileZipper

./: README.md  pyproject.toml  run_filezipper.py
V6/: Main_menu.py  add_job_ui.py  auth_manager.py  cloud_interface.py  config_utils.py  database.py  destinations_ui.py  email_utils.py  google_drive_connector.py  job_manager.py  job_runner.py  job_scheduler.py  onedrive_connector.py  restore_ui.py  run_jobs_ui.py  search_ui.py  station_checker.py  station_manager.py  test_gdrive_upload.py  test_job_runner.py  ui_tester.py  utilities_ui.py
filezipper/: __init__.py  cli.py  gui.py  simple_gui.py  web.py  zipper.py
tests/: test_web.py  test_zipper.py
